# public-datasets-pipelines

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS  Makefile  OWNERS  Pipfile  README.md  cloudbuild.yaml  data-source-{{  header-checker-lint.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  release-please.yaml
.github/workflows/: python-lint.yaml  terraform-lint.yaml  unit-tests-airflow1.yaml  unit-tests.yaml  yaml-lint.yaml
datasets/acs/: dataset.yaml
datasets/america_health_rankings/: dataset.yaml
datasets/austin/: austin_variables.json  dataset.yaml
datasets/austin_311/: dataset.yaml
datasets/austin_bikeshare/: dataset.yaml
datasets/austin_crime/: dataset.yaml
datasets/austin_waste/: dataset.yaml
datasets/bls/: dataset.yaml
datasets/cdc_chronic_disease_indicators/: dataset.yaml
datasets/cdc_places/: dataset.yaml
datasets/census_bureau_acs/: dataset.yaml
datasets/census_bureau_international/: dataset.yaml
datasets/census_opportunity_atlas/: dataset.yaml
datasets/cfpb_complaints/: dataset.yaml
datasets/chicago_crime/: dataset.yaml
datasets/city_health_dashboard/: dataset.yaml
datasets/cloud_storage_geo_index/: dataset.yaml
datasets/cms_medicare/: dataset.yaml
datasets/covid19_cds_eu/: dataset.yaml
datasets/covid19_google_mobility/: dataset.yaml
datasets/covid19_google_mobility_eu/:  .vars.dev.yaml  dataset.yaml
datasets/covid19_govt_response/: dataset.yaml
datasets/covid19_italy/: covid19_italy_variables.json  dataset.yaml
datasets/covid19_jhu_csse_eu/: dataset.yaml
datasets/covid19_tracking/: city_level_cases_and_deaths_pipeline.tf  dataset.yaml  national_testing_and_outcomes_pipeline.tf  state_level_aggregate_long_term_care_pipeline.tf  state_screenshots_pipeline.tf  state_testing_and_outcomes_pipeline.tf  variables.tf
datasets/covid19_vaccination_access/: dataset.yaml
datasets/covid19_vaccination_search_insights/: dataset.yaml
datasets/epa/: dataset.yaml
datasets/epa_historical_air_quality/: dataset.yaml
datasets/fda_drug/: dataset.yaml
datasets/fda_food/: dataset.yaml
datasets/fec/: dataset.yaml
datasets/geos_fp/: dataset.yaml
samples/: dataset.yaml  dataset_variables.json  pipeline.airflow1.yaml  pipeline.yaml  tutorial.ipynb
scripts/: dag_imports.json  deploy_dag.py  generate_dag.py  generate_pipeline_files.py  generate_terraform.py  scaffold.py
templates/: bikeshare_stations.json  citibike_stations.json  citibike_status.json
tests/: conftest.py  test_checks_for_all_dags.py  test_dag_integrity.py
(+2368 files in other folders)
