[tool.poetry]
name = "public-datasets-pipelines"
version = "0.1.0"
description = "Pipelines for Cloud Datasets and tutorials "
authors = ["Adler Santos <adlersantos@users.noreply.github.com>",
           "Shahin Saadati <happyhuman@users.noreply.github.com>"]

packages = []

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.group.pipeline.dependencies]
apache-airflow = "==2.1.2"
apache-airflow-providers-amazon = "2.4.0"
apache-airflow-providers-apache-beam = "3.0.0"
apache-airflow-providers-google = "5.0.0"
apache-airflow-providers-cncf-kubernetes = "2.0.2"
apache-beam = "2.32.0"
beautifulsoup4 = "==4.9.3"
flask-openid = "==1.3.0"
Jinja2 = "==2.11.3"
kubernetes = "*"
pandas-gbq = "==0.14.1"
"ruamel.yaml" = "==0.17.11"
SQLAlchemy = "==1.3.24"

[tool.poetry.group.docs.dependencies]
jupyter = "*"
matplotlib = "~3.2"
numpy = "~1.20"
pandas = "~1.3"
scikit-learn = "~1.0"
seaborn = "~0.11."
statsmodels = "~0.10"
tensorflow = "~2.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.1"
black = "==21.5b1"
flake8 = "==3.9.2"
isort = "*"
pytest-mock = "*"
testbook = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
