[tool.poetry]
name = "cloud-datasets"
version = "0.1.0"
description = "Pipelines and Tutorials for Cloud Datasets."
authors = ["Adler Santos <adlersantos@users.noreply.github.com>",
           "Shahin Saadati <happyhuman@users.noreply.github.com>"]

packages = []

[tool.poetry.dependencies]
python = "3.8.12"
pre-commit = "*"

[tool.poetry.group.pipelines.dependencies]
apache-airflow = "==2.2.5"
apache-airflow-providers-amazon = "*"
apache-airflow-providers-apache-beam = ">=2.38.0"
apache-airflow-providers-cncf-kubernetes = "*"
apache-airflow-providers-google = ">=8.0.0"
apache-beam = "2.37.0"
beautifulsoup4 = "==4.9.3"
black = "==22.3.0"
click = ">=8.0.0"
flask-openid = "==1.3.0"
flake8 = "==3.9.2"
google-cloud-orchestration-airflow = "*"
isort = "*"
Jinja2 = "==2.11.3"
kubernetes = "*"
pandas-gbq = "==0.14.1"
pytest = "^7.0.1"
pytest-mock = "*"
"ruamel.yaml" = "==0.17.11"
SQLAlchemy = "==1.3.24"
testbook = "*"

[tool.poetry.group.docs.dependencies]
black = "==22.3.0"
beautifulsoup4 = "==4.9.3"
flake8 = "==3.9.2"
isort = "*"
jupyter = "*"
matplotlib = "~3.2"
nbqa = "*"
numpy = "~1.20"
pandas = "~1.3"
pandas-gbq = "==0.14.1"
pytest = "^7.0.1"
pytest-mock = "*"
scikit-learn = "~1.0"
seaborn = "~0.11."
statsmodels = "~0.10"
tensorflow = "~2.8"
testbook = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
